--- a/trip_split_app/public/style.css
+++ b/trip_split_app/public/style.css
@@ -39,7 +39,7 @@ body {
 
 /* Заголовок сайта */
 .main-header {
-  background: linear-gradient(rgba(14, 40, 80, 0.6), rgba(14, 40, 80, 0.6)), url('/public/img/travel_bg.png') center/cover no-repeat;
+  background: linear-gradient(rgba(14, 40, 80, 0.6), rgba(14, 40, 80, 0.6)), url("./img/travel_bg.png") center/cover no-repeat;
   color: #fff;
   text-align: center;
   padding: 2rem 1rem;
